--- a/src/demos/showcase/13.html
+++ b/src/demos/showcase/13.html
@@ -18,29 +18,29 @@
   <div class="demo-source__description">
     There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
     <br>
-    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--fill</code> to fill the boxes content.
+    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--default</code> to fill the boxes content.
   </div>
 
   <div class="bfg bfg--row bfg--gap bfg--wrap">
-    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--default"></div></div>
 
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--default"></div></div>
   </div>
 
   <script>Demo.viewCode(); Demo.pageHeight();</script>
