Move github link into `md-to-html.js`

--- a/src/introduction.html
+++ b/src/introduction.html
@@ -310,7 +310,8 @@ npm run build
 # Build `introduction.html` from `README.md`
 npm run md-to-html
 </code></pre>
-<p>View on <a href="https://github.com/avine/bem-flex-grid">Github</a>.</p>
+
+<p><br>View on <a href="https://github.com/avine/bem-flex-grid">Github</a>.</p>
 
 </body>
 </html>
