--- a/src/demos/showcase/15.html
+++ b/src/demos/showcase/15.html
@@ -53,6 +53,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
+  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.pageHeight();</script>
 </body>
 </html>
